@@ -1,3 +1,4 @@
+Matching game tab: Improved performance/smoothness for bar animation and fly back animation
 Matching game tab: Make sure not all representations are numeric and not all non-numeric
 # 0.00.70 (64490) May 30, 2012
 Matching game tab: Added random fill for pies and horizontal/vertical slices
